--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-#stage 1
+# Stage 1: Build Angular App
 FROM node:18 as node
 WORKDIR /app
 COPY ./package*.json /app/
@@ -6,8 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build --prod
 
-#stage 2
+# Stage 2: Serve Angular App with Nginx
 FROM nginx:alpine
-COPY --from=node /app/dist/frontend /usr/share/nginx/html
-COPY /nginx-custom.conf /etc/nginx/conf.d/default.conf
-
+COPY --from=node /app/dist/frontend/browser /usr/share/nginx/html
+COPY nginx-custom.conf /etc/nginx/conf.d/default.conf
